WIP, update database from rest

--- a/demo/grab_image.ipynb
+++ b/demo/grab_image.ipynb
@@ -39,8 +39,8 @@
     }
    ],
    "source": [
-    "r = requests.get('http://lorempixel.com/800/800/')\n",
-    "Image(data=r.content)"
+    "# r = requests.get('http://lorempixel.com/800/800/')\n",
+    "# Image(data=r.content)"
    ]
   }
  ],
